New: Added form with Zod validation (Closes #7) New: Navigation translations + deleted redundant navigation.ts

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,10 @@
 {
 	"headings": {
 		"main": "Welcome to the homepage"
+	},
+	"navigation": {
+		"home": "Home",
+		"contact": "Contact",
+		"settings": "Settings"
 	}
 }
