--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,5 +1,10 @@
 {
 	"headings": {
 		"main": "홈페이지에 오신 것을 환영합니다"
+	},
+	"navigation": {
+		"home": "홈",
+		"contact": "연락처",
+		"settings": "설정"
 	}
 }
