--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,5 +1,10 @@
 {
 	"headings": {
 		"main": "Добро пожаловать на главную страницу"
+	},
+	"navigation": {
+		"home": "Главная",
+		"contact": "Связаться",
+		"settings": "Настройки"
 	}
 }
