Refactor: Update language switcher and localization files; adjust API URL handling

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -6,5 +6,8 @@
 		"home": "Home",
 		"contact": "Contact",
 		"settings": "Settings"
+	},
+	"buttons": {
+		"change-language": "Change language"
 	}
 }
