--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -6,5 +6,8 @@
 		"home": "Главная",
 		"contact": "Связаться",
 		"settings": "Настройки"
+	},
+	"buttons": {
+		"change-language": "Изменить язык"
 	}
 }
