--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -8,6 +8,18 @@
 		"settings": "설정"
 	},
 	"buttons": {
-		"change-language": "언어 변경"
+		"change-language": "언어 변경",
+		"load-more": "더 불러오기",
+		"refresh": "새로고침"
+	},
+	"settings": {
+		"theme": {
+			"label": "테마",
+			"description": "어플리케이션의 테마를 선택하세요"
+		},
+		"color": {
+			"label": "색상",
+			"description": "어플리케이션의 색상을 선택하세요"
+		}
 	}
 }
