--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -10,7 +10,9 @@
 	"buttons": {
 		"change-language": "Изменить язык",
 		"load-more": "Загрузить больше",
-		"refresh": "Обновить"
+		"refresh": "Обновить",
+		"submit": "Отправить",
+		"logout": "Выйти"
 	},
 	"settings": {
 		"theme": {
@@ -20,6 +22,26 @@
 		"color": {
 			"label": "Цвет",
 			"description": "Выберите цвет для приложения"
+		}
+	},
+	"validation": {
+		"required": "Это поле обязательно для заполнения",
+		"email": "Пожалуйста, введите действительный адрес электронной почты",
+		"password": "Пароль должен содержать не менее 6 символов"
+	},
+	"auth": {
+		"labels": {
+			"email": "Электронная почта",
+			"password": "Пароль",
+			"confirm-password": "Подтвердите пароль"
+		},
+		"login": {
+			"label": "Войти",
+			"description": "Пожалуйста, введите свои учетные данные для входа"
+		},
+		"register": {
+			"label": "Зарегистрироваться",
+			"description": "Создать новую учетную запись"
 		}
 	}
 }
