--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -10,7 +10,9 @@
 	"buttons": {
 		"change-language": "언어 변경",
 		"load-more": "더 불러오기",
-		"refresh": "새로고침"
+		"refresh": "새로고침",
+		"submit": "제출",
+		"logout": "로그아웃"
 	},
 	"settings": {
 		"theme": {
@@ -20,6 +22,26 @@
 		"color": {
 			"label": "색상",
 			"description": "어플리케이션의 색상을 선택하세요"
+		}
+	},
+	"validation": {
+		"required": "이 필드는 필수입니다",
+		"email": "유효한 이메일 주소를 입력하세요",
+		"password": "비밀번호는 최소 6자 이상이어야 합니다"
+	},
+	"auth": {
+		"labels": {
+			"email": "이메일",
+			"password": "비밀번호",
+			"confirm-password": "비밀번호 확인"
+		},
+		"login": {
+			"label": "로그인",
+			"description": "로그인하려면 자격 증명을 입력하세요"
+		},
+		"register": {
+			"label": "회원가입",
+			"description": "새 계정을 생성하세요"
 		}
 	}
 }
