--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -11,8 +11,7 @@
 		"change-language": "Изменить язык",
 		"load-more": "Загрузить больше",
 		"refresh": "Обновить",
-		"submit": "Отправить",
-		"logout": "Выйти"
+		"submit": "Отправить"
 	},
 	"settings": {
 		"theme": {
@@ -22,12 +21,11 @@
 		"color": {
 			"label": "Цвет",
 			"description": "Выберите цвет для приложения"
+		},
+		"language": {
+			"label": "Язык",
+			"description": "Выберите язык для приложения"
 		}
-	},
-	"validation": {
-		"required": "Это поле обязательно для заполнения",
-		"email": "Пожалуйста, введите действительный адрес электронной почты",
-		"password": "Пароль должен содержать не менее 6 символов"
 	},
 	"auth": {
 		"labels": {
@@ -35,13 +33,51 @@
 			"password": "Пароль",
 			"confirm-password": "Подтвердите пароль"
 		},
+		"buttons": {
+			"login": "Войти",
+			"register": "Зарегистрироваться",
+			"submit": "Отправить",
+			"sign-out": "Выйти"
+		},
 		"login": {
-			"label": "Войти",
 			"description": "Пожалуйста, введите свои учетные данные для входа"
 		},
 		"register": {
-			"label": "Зарегистрироваться",
 			"description": "Создать новую учетную запись"
+		},
+		"validation": {
+			"required": "Это поле обязательно для заполнения",
+			"email": "Пожалуйста, введите действительный адрес электронной почты",
+			"password": "Пароль должен содержать не менее 6 символов"
+		}
+	},
+	"scaffold-page": {
+		"heading": "{appName} - это Nuxt-шаблон для быстрого старта, который содержит все необходимые функции и компоненты для быстрого старта вашего приложения.",
+		"description": "Единственный шаблон для быстрого старта вашего приложения с поддержкой Supabase, i18n и базовых компонентов.",
+		"features": {
+			"heading": "Возможности",
+			"description": "Все необходимые функции и компоненты",
+			"supabase": "Интеграция Supabase",
+			"base-components": "Базовые компоненты для быстрого старта",
+			"i18n": "Поддержка интернационализации"
+		},
+		"usage": {
+			"heading": "Использование",
+			"description": "Как использовать шаблон",
+			"install": "Установка шаблона",
+			"run": "Запуск сервера разработки",
+			"start": "Начало разработки вашего приложения"
+		},
+		"documentation": {
+			"heading": "Документация",
+			"description": "Как использовать шаблон",
+			"read": "Читать документацию",
+			"explore": "Исследовать код",
+			"contribute": "Участвовать в проекте"
+		},
+		"essential-documentation": {
+			"heading": "Важная документация",
+			"description": "Посетите официальную документацию для инструментов, необходимых для построения вашего приложения, включая Nuxt, Nuxt UI и Supabase."
 		}
 	}
 }
