--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,30 +1,31 @@
 {
 	"headings": {
-		"main": "Добро пожаловать на главную страницу"
+		"main": "Добро пожаловать на нашу главную страницу!"
 	},
 	"navigation": {
 		"home": "Главная",
-		"contact": "Связаться",
-		"settings": "Настройки"
+		"contact": "Контакты",
+		"settings": "Настройки",
+		"articles": "Статьи"
 	},
 	"buttons": {
-		"change-language": "Изменить язык",
-		"load-more": "Загрузить больше",
-		"refresh": "Обновить",
+		"change-language": "Сменить язык",
+		"load-more": "Показать больше",
+		"refresh": "Обновить страницу",
 		"submit": "Отправить"
 	},
 	"settings": {
 		"theme": {
-			"label": "Тема",
-			"description": "Выберите тему для приложения"
+			"label": "Тема оформления",
+			"description": "Выберите стиль оформления для приложения"
 		},
 		"color": {
-			"label": "Цвет",
-			"description": "Выберите цвет для приложения"
+			"label": "Цветовая палитра",
+			"description": "Настройте цветовую схему приложения"
 		},
 		"language": {
-			"label": "Язык",
-			"description": "Выберите язык для приложения"
+			"label": "Язык интерфейса",
+			"description": "Выберите язык, который вам удобен"
 		}
 	},
 	"auth": {
@@ -34,50 +35,57 @@
 			"confirm-password": "Подтвердите пароль"
 		},
 		"buttons": {
-			"login": "Войти",
-			"register": "Зарегистрироваться",
-			"submit": "Отправить",
-			"sign-out": "Выйти"
+			"login": "Войти в аккаунт",
+			"register": "Создать аккаунт",
+			"submit": "Отправить данные",
+			"sign-out": "Выйти из аккаунта"
 		},
 		"login": {
-			"description": "Пожалуйста, введите свои учетные данные для входа"
+			"description": "Введите свои данные для входа в систему"
 		},
 		"register": {
-			"description": "Создать новую учетную запись"
+			"description": "Создайте новый аккаунт за пару минут"
 		},
 		"validation": {
 			"required": "Это поле обязательно для заполнения",
-			"email": "Пожалуйста, введите действительный адрес электронной почты",
-			"password": "Пароль должен содержать не менее 6 символов"
+			"email": "Введите корректный адрес электронной почты",
+			"password": "Пароль должен содержать минимум 6 символов"
 		}
 	},
 	"scaffold-page": {
-		"heading": "{appName} - это Nuxt-шаблон для быстрого старта, который содержит все необходимые функции и компоненты для быстрого старта вашего приложения.",
-		"description": "Единственный шаблон для быстрого старта вашего приложения с поддержкой Supabase, i18n и базовых компонентов.",
+		"heading": "{appName} — это мощный шаблон Nuxt для быстрого старта вашего проекта.",
+		"description": "Из коробки поддержка Supabase, интернационализация (i18n) и готовые базовые компоненты.",
 		"features": {
-			"heading": "Возможности",
-			"description": "Все необходимые функции и компоненты",
-			"supabase": "Интеграция Supabase",
-			"base-components": "Базовые компоненты для быстрого старта",
-			"i18n": "Поддержка интернационализации"
+			"heading": "Что внутри?",
+			"description": "Все, что нужно для быстрого старта",
+			"supabase": "Интеграция с Supabase",
+			"base-components": "Готовые базовые компоненты",
+			"i18n": "Поддержка нескольких языков"
 		},
 		"usage": {
-			"heading": "Использование",
-			"description": "Как использовать шаблон",
-			"install": "Установка шаблона",
-			"run": "Запуск сервера разработки",
-			"start": "Начало разработки вашего приложения"
+			"heading": "Как начать?",
+			"description": "Простые шаги для начала работы",
+			"install": "Установите шаблон",
+			"run": "Запустите сервер разработки",
+			"start": "Начните создавать своё приложение"
 		},
 		"documentation": {
 			"heading": "Документация",
-			"description": "Как использовать шаблон",
-			"read": "Читать документацию",
-			"explore": "Исследовать код",
-			"contribute": "Участвовать в проекте"
+			"description": "Полезные материалы для работы с шаблоном",
+			"read": "Ознакомьтесь с документацией",
+			"explore": "Изучите исходный код",
+			"contribute": "Присоединяйтесь к разработке"
 		},
 		"essential-documentation": {
-			"heading": "Важная документация",
-			"description": "Посетите официальную документацию для инструментов, необходимых для построения вашего приложения, включая Nuxt, Nuxt UI и Supabase."
+			"heading": "Полезные ссылки",
+			"description": "Изучите официальную документацию инструментов, таких как Nuxt, Nuxt UI и Supabase, чтобы максимально эффективно использовать шаблон."
 		}
+	},
+	"articles": {
+		"heading": "Статьи",
+		"description": "Читайте последние статьи",
+		"read": "Прочитать статью",
+		"explore": "Изучить статьи",
+		"contribute": "Присоединяйтесь к разработке"
 	}
 }
