Add guides section with content configuration and update styles

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -6,7 +6,8 @@
 		"home": "Home",
 		"contact": "Contact",
 		"settings": "Settings",
-		"articles": "Articles"
+		"articles": "Articles",
+		"guides": "Guides"
 	},
 	"buttons": {
 		"change-language": "Change language",
