Enhance guide localization and add features list component

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -6,7 +6,8 @@
 		"home": "Главная",
 		"contact": "Контакты",
 		"settings": "Настройки",
-		"articles": "Статьи"
+		"articles": "Статьи",
+		"guides": "Руководства"
 	},
 	"buttons": {
 		"change-language": "Сменить язык",
