--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -6,7 +6,7 @@
 		"home": "Главная",
 		"contact": "Контакты",
 		"settings": "Настройки",
-		"articles": "Статьи",
+		"recommendations": "Рекомендации",
 		"guides": "Руководства"
 	},
 	"buttons": {
@@ -82,11 +82,11 @@
 			"description": "Изучите официальную документацию инструментов, таких как Nuxt, Nuxt UI и Supabase, чтобы максимально эффективно использовать шаблон."
 		}
 	},
-	"articles": {
-		"heading": "Статьи",
-		"description": "Читайте последние статьи",
-		"read": "Прочитать статью",
-		"explore": "Изучить статьи",
+	"recommendations": {
+		"heading": "Рекомендации",
+		"description": "Читайте последние рекомендации.",
+		"read": "Прочитать рекомендации",
+		"explore": "Изучить рекомендации",
 		"contribute": "Присоединяйтесь к разработке"
 	}
 }
